--- a/workspace/node.js.hello/package.json
+++ b/workspace/node.js.hello/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node.js.hello",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,6 +12,8 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mongoose": "~4.2.4",
+    "mongodb": "~2.0.47"
   }
 }
