--- a/workspace/node.js.hello/package.json
+++ b/workspace/node.js.hello/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "mongoose": "~4.2.4",
-    "mongodb": "~2.0.47"
+    "mongodb": "~2.0.47",
+    "commander": "~2.9.0"
   }
 }
