--- a/toolkits/shell/bbxyard.rc
+++ b/toolkits/shell/bbxyard.rc
@@ -5,9 +5,12 @@
 
 
 # safe tmp work dir
-TMP_DIR=$HOME/var/run/$(basename $0).$$
+THIS_SCRIPT=$0
+[ "${THIS_SCRIPT:0:1}" == "-" ] && THIS_SCRIPT=${THIS_SCRIPT:1}
+TMP_DIR=$HOME/var/run/$(basename "$THIS_SCRIPT").$$
 function do_init_tmp_dir() { mkdir -p "$TMP_DIR"; }
 function do_fini_tmp_dir() { rm -rvf  "$TMP_DIR"; }
+
 
 # test can I have root power!
 function amiroot()
