[jhello] add Grammar-Enum test

--- a/yard/workspace/hmongo/.classpath
+++ b/yard/workspace/hmongo/.classpath
@@ -6,4 +6,7 @@
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/3.2.1/mongo-java-driver-3.2.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-async/3.2.1/mongodb-driver-async-3.2.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mongodb/bson/3.2.1/bson-3.2.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-core/3.2.1/mongodb-driver-core-3.2.1.jar"/>
 </classpath>
