--- a/yard/sdk/jbox/pom.xml
+++ b/yard/sdk/jbox/pom.xml
@@ -19,5 +19,10 @@
       <artifactId>mongodb-driver-async</artifactId>
       <version>3.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>3.2.1</version>
+    </dependency>    
   </dependencies>
 </project>
