--- a/yard/sdk/jbox/.classpath
+++ b/yard/sdk/jbox/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-async/3.2.1/mongodb-driver-async-3.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mongodb/bson/3.2.1/bson-3.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-core/3.2.1/mongodb-driver-core-3.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/3.2.1/mongo-java-driver-3.2.1.jar"/>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/study/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-async/3.2.1/mongodb-driver-async-3.2.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mongodb/bson/3.2.1/bson-3.2.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-core/3.2.1/mongodb-driver-core-3.2.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/3.2.1/mongo-java-driver-3.2.1.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
