--- a/yard/skills/libevent_demo/CMakeLists.txt
+++ b/yard/skills/libevent_demo/CMakeLists.txt
@@ -18,4 +18,5 @@ show_dbg_info()
 aux_source_directory(. SRCS)
 #addexe(${PROJECT_NAME} ${SRCS})
 addexe(http-request http-request.cpp)
-addexe(ev-mt-httpd ev-mt-httpd.cpp)
+addso(wbox ev-mt-httpd.cpp)
+addexe(wbox-test wbox-test.cpp)
