--- a/yard/sdk/wbox/wbox.cbp
+++ b/yard/sdk/wbox/wbox.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/libwbox" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/wbox" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -18,7 +18,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/libwbox" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/wbox" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -35,8 +35,18 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-fPIC" />
+			<Add directory="../../../../../sdk/include" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Linker>
+			<Add library="../../../../../sdk/lib/libevhtp.a" />
+			<Add library="../../../../../sdk/lib/libevent.a" />
+			<Add directory="../../../../../sdk/lib" />
+		</Linker>
+		<Unit filename="src/http-server.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
