--- a/yard/sdk/wbox/prj.cbp/wbox.cbp
+++ b/yard/sdk/wbox/prj.cbp/wbox.cbp
@@ -43,13 +43,15 @@
 			<Add library="../../../../../sdk/lib/libevent.a" />
 			<Add directory="../../../../../sdk/lib" />
 		</Linker>
-		<Unit filename="../src/http-server.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="../src/CMakeLists.txt" />
 		<Unit filename="../src/main.cpp" />
+		<Unit filename="../src/wbox.cpp" />
+		<Unit filename="../src/wbox_by_evhttp_mt.cpp" />
+		<Unit filename="../src/wbox_ctx.hpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
