[linux] add run_in_sub_process and get subprocess result function

--- a/yard/grammar/linux-c/src/posix/CMakeLists.txt
+++ b/yard/grammar/linux-c/src/posix/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(linux-c)
-
-
-# add subdirectory
-add_subdirectory(stdio)
-add_subdirectory(posix)
+project(posix)
 
 
 # define
@@ -12,7 +7,7 @@ set(SLNDIR .)
 aux_source_directory(. SRCS)
 
 # include common cmake
-include(${SLNDIR}/../../../../lib/cmake/main.cmake)
+include(${SLNDIR}/../../../../../lib/cmake/main.cmake)
 
 
 # add depends, flags and show debug info
@@ -21,4 +16,4 @@ add_depends_ev()
 show_dbg_info()
 
 # gen and deploy final apps
-#addexe(${PROJECT_NAME} ${SRCS})
+addexe(${PROJECT_NAME} ${SRCS})
