--- a/yard/sdk/wbox/samples/CMakeLists.txt
+++ b/yard/sdk/wbox/samples/CMakeLists.txt
@@ -15,5 +15,5 @@ add_depends_ev()
 show_dbg_info()
 
 # gen and deploy final apps
-include_directories(..)
+include_directories(${PROJECT_BINARY_DIR}/..)
 addexe(wbox-test wbox-test.cpp)
