--- a/yard/sdk/wbox/src/CMakeLists.txt
+++ b/yard/sdk/wbox/src/CMakeLists.txt
@@ -16,4 +16,5 @@ show_dbg_info()
 
 # gen and deploy final apps
 include_directories(..)
+include_directories(${PROJECT_BINARY_DIR}/..)
 addso(wbox ${SRCS})
