[wbox] add version deploy

--- a/yard/sdk/wbox/CMakeLists.txt
+++ b/yard/sdk/wbox/CMakeLists.txt
@@ -5,6 +5,7 @@ project(wbox)
 # version
 set(WBOX_VERSION_MAJOR 1)
 set(WBOX_VERSION_MINOR 0)
+set(WBOX_VERSION_PATCH 2)
 
 # configure
 configure_file("${PROJECT_SOURCE_DIR}/wbox.in.h" "${PROJECT_BINARY_DIR}/wbox.h")
@@ -23,4 +24,9 @@ include(InstallRequiredSystemLibraries)
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_VERSION_MAJOR "${WBOX_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${WBOX_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${WBOX_VERSION_PATCH}")
+set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${WBOX_VERSION_MAJOR}.${WBOX_VERSION_MINOR}.${WBOX_VERSION_PATCH}")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${WBOX_VERSION_MAJOR}.${WBOX_VERSION_MINOR}.${WBOX_VERSION_PATCH}-src")
+set(CPACK_BINARY_TBZ2 ON)
+set(CPACK_SOURCE_IGNORE_FILES "^${PROJECT_SOURCE_DIR}/build*/")
 include(CPack)
