--- a/yard/skills/grunt-demo/package.json
+++ b/yard/skills/grunt-demo/package.json
@@ -4,7 +4,8 @@
   "description": "grunt demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "grunt fs"
   },
   "author": "boxu",
   "license": "MIT",
