--- a/yard/skills/wepy-demo/package.json
+++ b/yard/skills/wepy-demo/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "wepy": "^1.6.0"
+    "wepy": "^1.6.0",
+    "wepy-com-toast": "^1.0.2",
+    "wepy-swipe-delete": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
