--- a/yard/skills/wepy-demo/package.json
+++ b/yard/skills/wepy-demo/package.json
@@ -8,7 +8,7 @@
     "build": "cross-env NODE_ENV=production wepy build --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "boxu",
   "license": "MIT",
   "dependencies": {
     "bbxyard": "^0.1.0",
@@ -22,11 +22,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
+    "babel-plugin-syntax-export-extensions": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.1.3",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
@@ -36,7 +39,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
-    "wepy-compiler-sass": "^1.3.7",
-    "wepy-eslint": "^1.5.3"
+    "wepy-eslint": "^1.5.3",
+    "wepy-plugin-imagemin": "^1.5.2",
+    "wepy-plugin-uglifyjs": "^1.3.6"
   }
 }
