--- a/yard/sdk/nbox/bbxyard/package.json
+++ b/yard/sdk/nbox/bbxyard/package.json
@@ -4,7 +4,7 @@
   "description": "bbxyard's main project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "bbxyard",
   "license": "MIT",
