--- a/yard/sdk/nbox/nbox-wepy/package.json
+++ b/yard/sdk/nbox/nbox-wepy/package.json
@@ -14,5 +14,9 @@
     "weapp"
   ],
   "author": "bbxyard",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
+  }
 }
