--- a/yard/sdk/nbox/nbox-wepy/package.json
+++ b/yard/sdk/nbox/nbox-wepy/package.json
@@ -4,7 +4,7 @@
   "description": "node js utils for wepy ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "keywords": [
     "node",
@@ -16,7 +16,13 @@
   "author": "bbxyard",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "mochawesome": "^3.0.2"
+  },
+  "dependencies": {
+    "randomcolor": "^0.5.3"
   }
 }
