--- a/yard/skills/thinkjs/thinkjs-api-demo/package.json
+++ b/yard/skills/thinkjs/thinkjs-api-demo/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
+    "moment": "^2.21.0",
     "request-promise": "^4.2.2",
     "think-logger3": "^1.0.0",
     "think-model": "^1.0.0",
