thinkjs 服务端基本学习完毕

--- a/yard/skills/thinkjs/thinkjs-api-demo/nginx.conf
+++ b/yard/skills/thinkjs/thinkjs-api-demo/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name example.com www.example.com;
+    server_name me.com api.me.com;
     root <ROOT_PATH>;
     set $node_port 8360;
 
