--- a/yard/sdk/nbox/nbox/package.json
+++ b/yard/sdk/nbox/nbox/package.json
@@ -4,7 +4,10 @@
   "description": "npm and js utils box",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --recursive",
+    "build": "webpack-cli",
+    "build-dev": "NODE_ENV=development webpack-cli",
+    "build-prod": "NODE_ENV=production webpack-cli"
   },
   "keywords": [
     "node",
@@ -19,9 +22,13 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
+    "grunt": "^1.0.2",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^3.3.0",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1",
-    "mochawesome": "^3.0.2"
+    "mochawesome": "^3.0.2",
+    "webpack": "^4.5.0"
   },
   "dependencies": {
     "node-fetch": "^2.0.0",
