--- a/yard/sdk/nbox/nbox/package.json
+++ b/yard/sdk/nbox/nbox/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nbox",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "npm and js utils box",
-  "main": "index.js",
+  "main": "lib/nbox.js",
   "scripts": {
     "test": "mocha --recursive",
     "build": "webpack-cli",
