--- a/yard/skills/libuv-demo/src/tinyweb/Makefile
+++ b/yard/skills/libuv-demo/src/tinyweb/Makefile
@@ -1,14 +1,16 @@
 .PHONY: clean
 
+
 # ####################################
 # Dashboard AREA
 # ####################################
 all:
-	echo PASS
+	make -C test
 
 
 # ####################################
 # Utils AREA
 # ####################################
 clean:
+	make -C test clean
 	rm -rvf *.o
