add Makefile run

--- a/yard/skills/07-mysql/Makefile
+++ b/yard/skills/07-mysql/Makefile
@@ -1,2 +1,16 @@
 init:
 	mysql -utest -Dtest < db/init.sql
+
+
+# ####################################
+# Dashboard AREA
+# ####################################
+demo:
+	node node/hallo-mysql.js | tee -ai run.log
+
+
+# ####################################
+# Utils AREA
+# ####################################
+clean:
+	rm -rvf *.log
