add node 相册demo

--- a/yard/skills/app/Makefile
+++ b/yard/skills/app/Makefile
@@ -2,13 +2,15 @@
 # ####################################
 # NodeApp AREA
 # ####################################
-electron: electron-quick-start electron-api-demos zh-cn-Electron-API-Demos
+electron: electron-quick-start electron-api-demos zh-cn-Electron-API-Demos electron-manka
 electron-quick-start:
 	https://github.com/electron/$@
 electron-api-demos:
 	https://github.com/electron/$@
 zh-cn-Electron-API-Demos:
 	git clone https://github.com/fuchao2012/$@
+electron-manka:
+	git clone https://github.com/xu455255849/Electron-manka electron-manka
 
 
 # ####################################
