--- a/yard/skills/00-web/bower-demo/Makefile
+++ b/yard/skills/00-web/bower-demo/Makefile
@@ -18,6 +18,8 @@ demo-add:
 	bower install fancybox --save
 	bower install bootstrap --save
 	bower install jquery --save
+	bower install https://github.com/sbstjn/timesheet.js.git --save
+
 
 # ####################################
 # Utils AREA
