--- a/yard/skills/00-web/bower-demo/bower.json
+++ b/yard/skills/00-web/bower-demo/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "fancybox": "^3.5.7",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "timesheet.js": "https://github.com/sbstjn/timesheet.js.git"
   }
 }
