--- a/yard/skills/66-js/thinkjs/thinkjs-vue-demo/fesrc/package.json
+++ b/yard/skills/66-js/thinkjs/thinkjs-vue-demo/fesrc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinkjs-Vue-demo",
+  "name": "thinkjs-vue-demo",
   "version": "1.0.0",
   "description": "qiwoo_acadamy fesrc package.json",
   "main": "index.js",
