增加定时任务

--- a/yard/skills/00-dss/celery-demo/Makefile
+++ b/yard/skills/00-dss/celery-demo/Makefile
@@ -7,6 +7,9 @@
 start-worker:
 	celery worker -A 'celery_app' -l info
 
+start-beat:
+	celery beat -A 'celery_app' -l info
+
 
 # ####################################
 # Utils AREA
