--- a/yard/skills/00-dss/celery-demo/Makefile
+++ b/yard/skills/00-dss/celery-demo/Makefile
@@ -1,5 +1,7 @@
 .PHONY: clean all
 
+PIP_REPO_OPT = -i http://pypi.douban.com/simple --trusted-host pypi.douban.com
+
 
 # ####################################
 # Dashboard AREA
@@ -7,6 +9,8 @@
 start:
 	supervisord -c conf/supervisord.conf
 stop:
+ctl:
+	supervisorctl -c conf/supervisord.conf
 
 
 # ####################################
@@ -14,24 +18,26 @@ stop:
 # ####################################
 start-fg:
 	supervisord -c conf/supervisord.conf -n
-start-worker:
-	celery worker -A 'celery_app' -l info
-start-beat:
+start-fg-worker:
+	celery worker -A 'celery_app' -l INFO -n 'worker-01@%h'
+start-fg-beat:
 	celery beat -A 'celery_app' -l info
 
 
 # ####################################
-# Supervisor AREA
+# Deps AREA
 # ####################################
+deps: conf log
+
 conf:
 	mkdir -p $@
 	echo_supervisord_conf > $@/supervisord.conf
 log:
 	mkdir -p $@
-deps: conf log
-
-pip-deps:
-	# pip3 install supervisor
+	
+py3-celery4-dj2:
+	pip3 install $(PIP_REPO_OPT) celery django redis supervisor
+	pip3 list
 
 
 # ####################################
