--- a/yard/skills/00-dss/celery-demo/conf/supervisor_celery_worker.ini
+++ b/yard/skills/00-dss/celery-demo/conf/supervisor_celery_worker.ini
@@ -1,5 +1,5 @@
 [program:django-celery-worker]
-command=celery worker -A 'celery_app' -l info
+command=celery worker -A 'celery_app' -l INFO -n worker-01@mbp
 directory=/home/demo/celery-demo
 environment=PATH="/home/demo/.venv-hub/py3-celery4-dj2/bin"
 stdout_logfile=/home/demo/celery-demo/log/celery.worker.log
