--- a/yard/skills/00-dss/celery-demo/conf/supervisor_celery_beat.ini
+++ b/yard/skills/00-dss/celery-demo/conf/supervisor_celery_beat.ini
@@ -1,9 +1,9 @@
 [program:django-celery-beat]
-command=celery beat -A 'celery_app' -l info
+command=celery beat -A 'celery_app' -l INFO
 directory=/home/demo/celery-demo
 environment=PATH="/home/demo/.venv-hub/py3-celery4-dj2/bin"
-stdout_logfile=/home/demo/celery-demo/log/celery.worker.log
-stderr_logfile=/home/demo/celery-demo/log/celery-err.worker.log
+stdout_logfile=/home/demo/celery-demo/log/celery.beat.log
+stderr_logfile=/home/demo/celery-demo/log/celery-err.beat.log
 autostart=true
 autorestart=true
 startsecs=10
