cookbook - tornado - websocket学习

--- a/yard/skills/66-js/cookbook/ws-demo/Makefile
+++ b/yard/skills/66-js/cookbook/ws-demo/Makefile
@@ -7,6 +7,14 @@ endif
 
 
 # ####################################
+# Dashboard AREA
+# ####################################
+start:
+	node src/ws-server.js &
+	node src/http-server.js &
+
+
+# ####################################
 # git
 # ####################################
 gpom:
