编写资源文件

--- a/yard/skills/66-java/seckill/Makefile
+++ b/yard/skills/66-java/seckill/Makefile
@@ -25,6 +25,7 @@ pub:
 # ####################################
 depress:
 	mvn eclipse:eclipse
+	mvn idea:idea
 
 
 # ####################################
