devtools 热部署功能

--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# 关闭缓冲，实时刷新
+spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=true
 
+# 热部署生效
+spring.devtools.restart.enabled=true
+# 设置重启监听的目录
+spring.devtools.restart.additional-paths=src/main/java
+
+# 为MyBatis设置，生产环境可以删除
