http://localhost:8086/spboot/user/5972

--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -8,3 +8,43 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
 # 为MyBatis设置，生产环境可以删除
+
+
+############################################################
+#
+# Server 服务端相关配置
+#
+############################################################
+# 配置api端口号
+server.port=8086
+# 配置context-path, 一般来说这个配置在正式发布的时候不配置
+server.servlet.context-path=/spboot
+# 错误页，指定发生错误时，跳转的URL --> BasicErrorController
+#server.error.path=/error
+# session最大超时时间(分钟)，默认为30分钟
+server.session-timeout=60
+# 该服务绑定IP地址，启动服务器时如本机不是该IP地址则抛出异常启动失败,
+# 只有特殊需求的情况下才配置, 具体根据各自的业务来设置
+#server.address=192.168.1.2
+server.address=127.0.0.1
+
+
+############################################################
+# Server - tomcat 相关常用配置
+############################################################
+# tomcat最大线程数, 默认为200
+#server.tomcat.max-threads=250
+# tomcat的URI编码
+server.tomcat.uri-encoding=UTF-8
+# 存放Tomcat的日志、Dump等文件的临时文件夹，默认为系统的tmp文件夹
+#（如：C:\Users\Shanhy\AppData\Local\Temp）
+#server.tomcat.basedir=H:/springboot-tomcat-tmp
+# 打开Tomcat的Access日志，并可以设置日志格式的方法：
+#server.tomcat.access-log-enabled=true
+#server.tomcat.access-log-pattern=
+# accesslog目录，默认在basedir/logs
+#server.tomcat.accesslog.directory=
+# 日志文件目录
+#logging.path=H:/springboot-tomcat-tmp
+# 日志文件名称，默认为spring.log
+#logging.file=myapp.log
