--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 关闭缓冲，实时刷新
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 #spring.thymeleaf.cache=true
 
 # 热部署生效
@@ -48,3 +48,35 @@ server.tomcat.uri-encoding=UTF-8
 #logging.path=H:/springboot-tomcat-tmp
 # 日志文件名称，默认为spring.log
 #logging.file=myapp.log
+
+
+############################################################
+#
+# freemarker 静态资源配置
+#
+############################################################
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/templates
+# 关闭缓存, 即时刷新, 上线生产环境需要改为true
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+
+
+############################################################
+#
+# thymeleaf 静态资源配置
+#
+############################################################
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+# 关闭缓存, 即时刷新, 上线生产环境需要改为true
+spring.thymeleaf.cache=false
