--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -28,6 +28,9 @@ server.session-timeout=60
 #server.address=192.168.1.2
 server.address=127.0.0.1
 
+#设定静态文件路径，js,css等
+spring.mvc.static-path-pattern=/static/**
+
 
 ############################################################
 # Server - tomcat 相关常用配置
