--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.devtools.restart.enabled=true
 # 设置重启监听的目录
 spring.devtools.restart.additional-paths=src/main/java
 
-# 为MyBatis设置，生产环境可以删除
+# 为MyBatis设置，生产环境可删除
+restart.include.mapper=/mapper-[\\w-\\.]+jar
+restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 
 
 ############################################################
