--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -85,3 +85,38 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 # 关闭缓存, 即时刷新, 上线生产环境需要改为true
 spring.thymeleaf.cache=false
+
+
+############################################################
+#
+# 配置数据源相关	使用阿里巴巴的 druid 数据源
+#
+############################################################
+spring.datasource.url=jdbc:mysql://localhost:3307/leecx
+spring.datasource.username=hero
+spring.datasource.password=1949.cn
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.initial-size=1
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.max-active=20
+spring.datasource.druid.test-on-borrow=true
+spring.datasource.druid.stat-view-servlet.allow=true
+
+
+############################################################
+#
+# mybatis 配置
+#
+############################################################
+# mybatis 配置
+mybatis.type-aliases-package=com.imooc.pojo
+mybatis.mapper-locations=classpath:mapper/*.xml
+# 通用 Mapper 配置
+mapper.mappers=com.imooc.utils.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+# 分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
