--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -89,6 +89,31 @@ spring.thymeleaf.cache=false
 
 ############################################################
 #
+# REDIS 配置
+#
+############################################################
+# Redis数据库索引（默认为0）
+spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=1000
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=2
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
+
+
+############################################################
+#
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
@@ -112,7 +137,7 @@ spring.datasource.druid.stat-view-servlet.allow=true
 mybatis.type-aliases-package=com.imooc.pojo
 mybatis.mapper-locations=classpath:mapper/*.xml
 # 通用 Mapper 配置
-mapper.mappers=com.imooc.utils.MyMapper
+mapper.mappers=me.contrib.utils.db.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
 # 分页插件配置
