--- a/yard/skills/66-java/spboot/src/main/resources/application.properties
+++ b/yard/skills/66-java/spboot/src/main/resources/application.properties
@@ -30,9 +30,6 @@ server.session-timeout=60
 #server.address=192.168.1.2
 server.address=127.0.0.1
 
-#设定静态文件路径，js,css等
-spring.mvc.static-path-pattern=/static/**
-
 
 ############################################################
 # Server - tomcat 相关常用配置
@@ -53,6 +50,25 @@ server.tomcat.uri-encoding=UTF-8
 #logging.path=H:/springboot-tomcat-tmp
 # 日志文件名称，默认为spring.log
 #logging.file=myapp.log
+
+
+############################################################
+#
+# 配置i18n 资源文件，供thymeleaf 读取
+#
+############################################################
+spring.messages.basename=i18n/messages
+spring.messages.cache-duration=3600
+spring.messages.encoding=UTF-8
+
+
+############################################################
+#
+# Spring 杂项
+#
+############################################################
+#设定静态文件路径，js,css等
+spring.mvc.static-path-pattern=/static/**
 
 
 ############################################################
